--- a/photometrie.html
+++ b/photometrie.html
@@ -184,9 +184,9 @@
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
 
             </figure>
-            <figure class="avatar__container">
-                <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-            </figure>
+            
+            <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
+           
         </header>
 
 
@@ -195,10 +195,11 @@
             <div class="nav-deco"></div>
             <div class="sub-nav">
                 <span></span>
-                <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
+                <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
                     <a href="index.html" class="container active">
                         <figure class="overlayImg">
-                            <img src="images/social-media-2786261_1920.jpg" alt="" class="nav--image" width="100%"
+                            <!-- les icônes utilisées du sites flaticon (stickers) -->
+                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
                                 height="auto">
                         </figure>
                         <h3>home</h3>
@@ -210,43 +211,43 @@
                     </a>
                     <a href="about.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/winter-1044922_1920.jpg" alt="" class="nav--image" width="100%"
+                            <img src="images/ADW-about01-icone.svg" alt="" class="nav--image" width="100%"
                                 height="auto">
                         </figure>
                         <h3>ADW</h3>
                         <div class="overlayText">
                             <p class="text">
-                                L'histoire, les valeurs, les collaborateurs et notre travail
+                                Objectifs, Valeurs, Collaborateurs
                             </p>
                         </div>
                     </a>
 
                     <a href="gallerie.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/cow-1570656_1920.jpg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
                         </figure>
                         <h3>Gallerie</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez nos réalisations
                             </p>
                         </div>
                     </a>
 
                     <a href="cv.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/cow-1570656_1920.jpg" alt="" class="nav--image" width="100%" height="auto">
+                            <img src="images/ADW-cv-icone.svg" alt="" class="nav--image" width="100%" height="auto">
                         </figure>
                         <h3>Mon CV</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Découvrez mes formations et mes expériences
                             </p>
                         </div>
                     </a>
                     <a href="faq.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/meet-1019875_1920.jpg" alt="" class="nav--image" width="100%"
+                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
                                 height="auto">
                         </figure>
                         <h3>Q & R</h3>
@@ -258,13 +259,14 @@
                     </a>
                     <a href="contact.html" class="container">
                         <figure class="overlayImg">
-                            <img src="images/meet-1019875_1920.jpg" alt="" class="nav--image" width="100%"
+                            <img src="images/ADW-contact-icone.svg" alt="" class="nav--image" width="100%"
                                 height="auto">
                         </figure>
                         <h3>Contact</h3>
                         <div class="overlayText">
                             <p class="text">
-                                Lorem ipsum dolor sit amet.
+                                Pour plus d'information,
+                                Laissez nous un message.
                             </p>
                         </div>
                     </a>
@@ -274,6 +276,7 @@
                 </nav>
             </div>
         </div>
+
 
 		<main class="photo">
 			<div class="appareil__photo">
