--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@
 </frameset> -->
 
 <body>
+    <a href="#topnav" class="retourmenu flex--column">
+        <div class="remontemenu--icone"></div>
+    </a>
     <div class="global flex--column">
         <!-- ---------- HEADER ---------- -->
         <header>
