--- a/mentionsLegales.html
+++ b/mentionsLegales.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+    <a href="#topnav" class="retourmenu flex--column">
+        <div class="remontemenu--icone"></div>
+    </a>
     <div class="global">
          <!-- ---------- HEADER ---------- -->
          <header>
