--- a/cv.html
+++ b/cv.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+    <a href="#topnav" class="retourmenu flex--column">
+        <div class="remontemenu--icone"></div>
+    </a>
     <div class="global flex--column">
         <!-- ---------- HEADER ---------- -->
         <header>
