--- a/faq.html
+++ b/faq.html
@@ -67,6 +67,9 @@
 </head>
 
 <body>
+    <a href="#topnav" class="retourmenu flex--column">
+        <div class="remontemenu--icone"></div>
+    </a>
     <div class="global flex--column">
          <!-- ---------- HEADER ---------- -->
          <header>
