--- a/graphisme.html
+++ b/graphisme.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+    <a href="#topnav" class="retourmenu flex--column">
+        <div class="remontemenu--icone"></div>
+    </a>
     <div class="global flex--column">
         <!-- ---------- HEADER ---------- -->
         <header>
