--- a/contact.html
+++ b/contact.html
@@ -470,7 +470,7 @@
 
             <form action="formmail2.php" accept-charset="utf-8" method="post">
               <fieldset>
-                <legend>Données de contact</legend>
+                <legend class="flex--column">Données de contact</legend>
                 <div class="contchamp">
                   <div class="champ">
                     <label>Nom </label><input name="name" type="text" placeholder="votre nom" pattern="[a-zA-Z]{1,}"
