--- a/contact.html
+++ b/contact.html
@@ -204,6 +204,7 @@
   <a href="#topnav" class="retourmenu flex--column">
     <div class="remontemenu--icone"></div>
   </a>
+  <!-- Balise classe global -->
   <div class="global flex--column">
     <!-- ---------- HEADER ---------- -->
     <header>
@@ -252,7 +253,6 @@
               </p>
             </div>
           </a>
-
           <a href="gallerie.html" class="container">
             <figure class="overlayImg">
               <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
@@ -264,7 +264,6 @@
               </p>
             </div>
           </a>
-
           <a href="cv.html" class="container">
             <figure class="overlayImg">
               <img src="images/ADW-cv-icone.svg" alt="" class="nav--image" width="100%" height="auto">
@@ -305,7 +304,7 @@
         </nav>
       </div>
     </div>
-
+<!-- Corps de la page -->
     <main class="main--contact flex--row">
       <article class="main--contact__cont flex--column">
         <span></span>
