--- a/cv.html
+++ b/cv.html
@@ -449,12 +449,12 @@
 
                 <!-- mentions legales  -->
                 <div class="mentions flex--row">
-                    <p>ADW Tech 2023</p>
+                    <a href="#" class="foot--timer__adw">ADW Tech 2023</a>
                     <!-- <a href="">
                         <p>terms conditions d'utilisations</p>
                     </a> -->
                     <a href="mentionsLegales.html" class="mentions-pages">
-                        <p>mentions légales</p>
+                        mentions légales
                     </a>
                     <!-- <a href="">
                         <p>all rights reserved</p>
