--- a/gallerie.html
+++ b/gallerie.html
@@ -635,7 +635,7 @@
 
                 <!-- mentions legales  -->
                 <div class="mentions flex--row">
-                    <p>ADW Tech 2023</p>
+                    <a href="#" class="foot--timer__adw">ADW Tech 2023</a>
                     <!-- <a href="">
                         <p>terms conditions d'utilisations</p>
                     </a> -->
