--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
             </div>
 
             <div class="centre">
-                <section class="centre__section">
+                <section class="centre__section" data-aos="flip-right">
                     <figure>
                         <img src="images/constructionWeb.jpg" alt="">
                     </figure>
                 </section>
-                <section class="centre__section">
+                <section class="centre__section" data-aos="flip-left">
                     <figure>
                         <img src="images/digitalisation.jpg" alt="">
                     </figure>
