--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 
         <!-- ---------- BANNER ---------- -->
-        <div class=" presentation carte banniere parallax flex--space__around">
+        <div class=" presentation banniere parallax flex--space__around">
             
             <div class="presentation--services" data-aos="fade-right">
                 <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
