--- a/contact.html
+++ b/contact.html
@@ -81,12 +81,6 @@
       width: 100%;
     }
 
-    .contact div {
-      margin-left: 12px;
-    }
-
-
-
     @media (max-width: 900px) {
       .main--contact span {
         width: calc(10vw - 2px);
@@ -580,7 +574,7 @@
           </div>
           <div class="contact card-info">
             <h3>Contact et order</h3>
-            <div class="card- flex--column">
+            <div class="card-info__service flex--column">
               <ul class="card-infol__i-services">
                 <li>Devis</li>
                 <li>Charte Graphique</li>
