--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                                 <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                Eius eveniet dolore omnis? Aut exercitationem asperiores voluptatem numquam doloribus consectetur hic.
+                                Pour promouvoir un produit, un événement, une conférence
+                                nous réalisons des affiches impactantes et qui toucheraient un large public.
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -253,8 +253,8 @@
                                 <img src="realisation/imgPhotoshopADW/businessCardRecto.jpg" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                Eius eveniet dolore omnis? Aut exercitationem asperiores voluptatem numquam doloribus consectetur hic.
+                                 Papéterie:
+                                 Cartes de visite - Enveloppes personnalisées - Entête et filigrane de feuille
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -265,8 +265,10 @@
                                 <img src="realisation/imgPhotoshopADW/ciel-etoilesMultipleSrc.jpg" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                Eius eveniet dolore omnis? Aut exercitationem asperiores voluptatem numquam doloribus consectetur hic.
+                                Effacer un détail - 
+                                Enlever l'arrière plan - 
+                                Ajouter une image, ...
+                                Dans votre photo.
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -279,8 +281,8 @@
                                 <img src="images/uiux.jpg" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Laudantium ea, dolores error sapiente nam reprehenderit?
+                                Un dessin de votre site 
+                                avec la définition de l'endroit et du style de chaque élément de votre site
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -290,8 +292,8 @@
                                 <img src="images/prototypage.png" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Laudantium ea, dolores error sapiente nam reprehenderit?
+                                La maquette finale de votre site confection soit avec Xd ou Figma
+                                Ici nous réalisons votre site entièr avant de l'encoder
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -301,8 +303,7 @@
                                 <img src="images/cmsWordPress.jpg" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Laudantium ea, dolores error sapiente nam reprehenderit?
+                                Site créer à l'aide dun logiciel
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -312,8 +313,7 @@
                                 <img src="" alt="">
                             </figure>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Laudantium ea, dolores error sapiente nam reprehenderit?
+                                LSite créer entièement en code html, css, javascript, ...
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
