--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
     <a href="#topnav" class="retourmenu flex--column">
         <div class="remontemenu--icone"></div>
     </a>
+    <!-- reseaux  -->
+    <div class="reseaux-sociaux-lateral flex--column">
+        <a href="#">
+            <img src="images/youtube.png" alt="youtube">
+        </a>
+        <a href="#">
+            <img src="images/instagram.png" alt="instagram">
+        </a>
+
+        <a href="#">
+            <img src="images/facebook.png" alt="facebook">
+        </a>
+
+        <a href="#">
+            <img src="images/linkedin.png" alt="linkedin">
+        </a>
+    </div>
     <div class="global flex--column">
         <!-- ---------- HEADER ---------- -->
         <header>
@@ -303,7 +320,7 @@
                                 <img src="images/cmsWordPress.jpg" alt="">
                             </figure>
                             <p>
-                                Site créer à l'aide dun logiciel
+                                Votre Site est crée à l'aide dun logiciel
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
@@ -313,7 +330,7 @@
                                 <img src="" alt="">
                             </figure>
                             <p>
-                                LSite créer entièement en code html, css, javascript, ...
+                                Votre Site est crée entièement en code html, css, javascript, ...
                             </p>
                             <a href="realisation/uiux.html">Plus de détails...</a>
                         </article>
