--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </a>
     <!-- reseaux  -->
     <div class="reseaux-sociaux-lateral flex--column">
-        <a href="#">
+        <a href="#" style="background-color: red;">
             <img src="images/rs-youtube.png" alt="youtube">
         </a>
         <a href="#">
