--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         <a href="#" style="background-color: red;">
             <img src="images/rs-youtube.png" alt="youtube">
         </a>
-        <a href="#">
+        <a href="#" style="background-image: linear-gradient(-135deg, violet,violet, red,orange, yellow ) ;">
             <img src="images/rs-instagram.png" alt="instagram">
         </a>
 
-        <a href="#">
+        <a href="#" style="background-color: blue ;">
             <img src="images/rs-facebook.png" alt="facebook">
         </a>
 
-        <a href="#">
+        <a href="#" style="background-color: rgb(2, 2, 70);">
             <img src="images/rs-linkendin.png" alt="linkedin">
         </a>
     </div>
