--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="images/rs-facebook.png" alt="facebook">
         </a>
 
-        <a href="#" style="background-color: rgb(2, 2, 70);">
+        <a href="#" style="background-color: #0808a8;">
             <img src="images/rs-linkendin.png" alt="linkedin">
         </a>
     </div>
