--- a/about.html
+++ b/about.html
@@ -235,12 +235,8 @@
 
                     <h3>La communication</h3>
                     <p> 
-
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Rem sed exercitationem fugiat deserunt natus? Reiciendis ut labore soluta,
-                        deserunt saepe voluptatibus, exercitationem natus praesentium quae error eius delectus autem.
-                        Reprehenderit numquam labore cupiditate voluptates aliquid quaerat repudiandae aut molestias
-                        distinctio?
+                        Tout notre savoir faire sera mis en contribution pour vous constituer une identité visuelle
+                        Ainsi nous mettre en oeuvre nos compétences pour promouvoir l'image de votre site internet.
                     </p>
                     <h3>Notre travail </h3>
                     <p> 
@@ -261,28 +257,22 @@
                         velit dolore! Odit voluptatum ipsam doloremque aperiam cupiditate ducimus quasi!
                     </p>
                 </div>
-                <div class="associer__responsabilites flex--row">
+                <div class="associer__responsabilites flex--space__around">
                     <figure class="travail__associer">
-                        <img src="images/adw-infographiste.png" alt="" class="associer__activiter" width="100%" height="auto">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Molestias atque ea facere accusantium ratione corrupti.
-                        </p>
+                        <img src="images/adw-infographiste.png" alt="">
+                        <figcaption>Mme Nathalie Dumont</figcaption>
+                        <h3>Infographiste</h3>
                     </figure>
                     <hr>
                     <figure class="travail__associer">
-                        <img src="images/adw-devwebSenor.png" alt="" class="associer__activiter" width="100%" height="auto">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Molestias atque ea facere accusantium ratione corrupti.
-                        </p>
+                        <img src="images/adw-devwebSenor.png" alt="">
+                        <figcaption>M. Alexendre Girard</figcaption>
+                        <h3>Développeur web sr.</h3>
                     </figure>
                     <figure class="travail__associer">
-                        <img src="images/adw-webDesigner.png" alt="" class="associer__activiter" width="100%" height="auto">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Molestias atque ea facere accusantium ratione corrupti.
-                        </p>
+                        <img src="images/adw-webDesigner.png" alt="">
+                        <figcaption>Eulalie Dupont</figcaption>
+                        <h3>Web Designer</h3>
                     </figure>
                 </div>
             </section>
