--- a/about.html
+++ b/about.html
@@ -213,9 +213,9 @@
                                 <img src="images/avatar.jpg" alt="">
                             </figure>
                         </div>
-                        <p class="texte-norm">
-                            Infographiste . Webdesigner . Ux Designer . CMS (WordPress)
-                        </p>
+                        <h2 class="texte-norm">
+                            CEO de l'ADW
+                        </h2>
                     </section>
 
                     <section class="sect--2">
