--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
                             </figure>
                         </div>
                         <h2 class="texte-norm">
-                            CEO de l'ADW
+                           Créateur de l'ADW
                         </h2>
                     </section>
 
