--- a/faq.html
+++ b/faq.html
@@ -70,6 +70,23 @@
     <a href="#topnav" class="retourmenu flex--column">
         <div class="remontemenu--icone"></div>
     </a>
+    <!-- reseaux  -->
+    <div class="reseaux-sociaux-lateral flex--column">
+        <a href="#" style="background-color: red;">
+            <img src="images/rs-youtube.png" alt="youtube">
+        </a>
+        <a href="#" style="background-image: linear-gradient(-135deg, violet,violet, red,orange, yellow ) ;">
+            <img src="images/rs-instagram.png" alt="instagram">
+        </a>
+
+        <a href="#" style="background-color: blue ;">
+            <img src="images/rs-facebook.png" alt="facebook">
+        </a>
+
+        <a href="#" style="background-color: #0808a8;">
+            <img src="images/rs-linkendin.png" alt="linkedin">
+        </a>
+    </div>
     <div class="global flex--column">
          <!-- ---------- HEADER ---------- -->
          <header>
