--- a/gallerie.html
+++ b/gallerie.html
@@ -245,7 +245,7 @@
                         <figcaption></figcaption>
                     </figure>
                 </a> -->
-                
+
                 <a href="realisation/imgIllustratorADW/chantAllegresse.jpg" data-lightbox="roadtrip"
                     data-title="My caption">
                     <figure>
@@ -366,12 +366,12 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/Affiche.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <!-- <a href="realisation/imgPhotoshopADW/Affiche.jpg" data-lightbox="roadtrip" data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/Affiche.jpg" alt="">
                         <figcaption></figcaption>
                     </figure>
-                </a>
+                </a> -->
                 <a href="realisation/imgPhotoshopADW/archi-01a.jpg" data-lightbox="roadtrip" data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/archi-01a.jpg" alt="">
@@ -435,7 +435,8 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/gouttesDoubles.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <a href="realisation/imgPhotoshopADW/gouttesDoubles.jpg" data-lightbox="roadtrip"
+                    data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/gouttesDoubles.jpg" alt="">
                         <figcaption></figcaption>
@@ -483,7 +484,8 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/mountainHoney.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <a href="realisation/imgPhotoshopADW/mountainHoney.jpg" data-lightbox="roadtrip"
+                    data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/mountainHoney.jpg" alt="">
                         <figcaption></figcaption>
@@ -501,7 +503,8 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/pink-hair-sky.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <a href="realisation/imgPhotoshopADW/pink-hair-sky.jpg" data-lightbox="roadtrip"
+                    data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/pink-hair-sky.jpg" alt="">
                         <figcaption></figcaption>
@@ -549,7 +552,8 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/visageFemme04.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <a href="realisation/imgPhotoshopADW/visageFemme04.jpg" data-lightbox="roadtrip"
+                    data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/visageFemme04.jpg" alt="">
                         <figcaption></figcaption>
@@ -567,7 +571,8 @@
                         <figcaption></figcaption>
                     </figure>
                 </a>
-                <a href="realisation/imgPhotoshopADW/womanSerpentine1.jpg" data-lightbox="roadtrip" data-title="My caption">
+                <a href="realisation/imgPhotoshopADW/womanSerpentine1.jpg" data-lightbox="roadtrip"
+                    data-title="My caption">
                     <figure>
                         <img src="realisation/imgPhotoshopADW/womanSerpentine1.jpg" alt="">
                         <figcaption></figcaption>
