--- a/about.html
+++ b/about.html
@@ -277,13 +277,13 @@
                 <div class="associer__responsabilites flex--space__around">
                     <figure class="travail__associer">
                         <img src="images/adw-infographiste.png" alt="">
-                        <figcaption>Mme Nathalie Dumont</figcaption>
+                        <figcaption>Nathalie Dumont</figcaption>
                         <h3>Infographiste</h3>
                     </figure>
                     <hr>
                     <figure class="travail__associer">
                         <img src="images/adw-devwebSenor.png" alt="">
-                        <figcaption>M. Alexendre Girard</figcaption>
+                        <figcaption>Alexendre Girard</figcaption>
                         <h3>Développeur web sr.</h3>
                     </figure>
                     <figure class="travail__associer">
