--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <!-- ---------- BANNER ---------- -->
         <div class=" presentation banniere parallax flex--space__around">
-            <div class="presentation--services" data-aos="fade-right">
+            <div class="presentation--services" >
                 <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
                 <h2>Infographisme</h2>
                 <h3>Photoshop</h3>
