--- a/uiux.html
+++ b/uiux.html
@@ -160,33 +160,31 @@
             <h2>Réalisations</h2>
             <menu class="nav-central flex--column">
                 <a href="gestionProjet.html">
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/projet-adw.svg" alt="">
                     <span>Gestion Web </span>
                 </a>
-                
-
                 <a href="photometrie.html">
                     <span>Retouche Image</span>
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/photo-adw.svg" alt="">
                 </a>
-                <a href="graphisme.html" >
-                    <img src="images/checklist.png" alt="">
+                <a href="graphisme.html">
+                    <img src="images/graphisme-adw1.svg" alt="">
                     <span>Infographiste </span>
                 </a>
 
                 <a href="uiux.html">
                     <span>UI UX Ergonomie web</span>
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/uxui-adw.svg" alt="">
                 </a>
 
                 <a href="developpementWeb.html">
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/devweb-adw.svg" alt="">
                     <span>Developpement web</span>
                 </a>
 
-                <a href="#webCms.html">
+                <a href="webCms.html">
                     <span>Création CMS </span>
-                    <img src="images/checklist.png" alt="">
+                    <img src="images/cms-adw.png" alt="">
                 </a>
             </menu>
 
