--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <!-- ---------- BANNER ---------- -->
         <div class=" presentation banniere parallax flex--space__around">
-            <div class="presentation--services" >
+            <div class="presentation--services">
                 <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
                 <h2>Infographisme</h2>
                 <h3>Photoshop</h3>
@@ -222,97 +222,110 @@
                 <div class="section__haut">
                     <!-- Illustration Construction de l'identité graphique -->
                     <section id="section-1__haut">
-                        <article class="carte art--haut">
-                            <h3>Logo</h3>
-                            <figure>
-                                <img src="realisation/imgIllustratorADW/logos/Logo_Original.png" alt="">
-                            </figure>
-                            <p>
-                                Nous créons votre logo
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
-                        <article class="carte art--haut">
-                            <h3>Affiche</h3>
-                            <figure>
-                                <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
-                            </figure>
-                            <p>
-                                Pour promouvoir un produit, un événement, une conférence
-                                nous réalisons des affiches impactantes et qui toucheraient un large public.
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
 
-                        <article class="carte art--haut">
-                            <h3>Carte de visite</h3>
-                            <figure>
-                                <img src="realisation/imgPhotoshopADW/businessCardRecto.jpg" alt="">
-                            </figure>
-                            <p>
-                                Papéterie:
-                                Cartes de visite - Enveloppes personnalisées - Entête et filigrane de feuille
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
-                        <article class="carte art--haut">
-                            <h3>Montage image</h3>
-                            <figure>
-                                <img src="realisation/imgPhotoshopADW/ciel-etoilesMultipleSrc.jpg" alt="">
-                            </figure>
-                            <p>
-                                Effacer un détail -
-                                Enlever l'arrière plan -
-                                Ajouter une image, ...
-                                Dans votre photo.
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
+                        <div class="cont--art__haut">
+
+                            <article class="carte art--haut">
+                                <h3>Carte de visite</h3>
+                                <figure>
+                                    <img src="realisation/imgPhotoshopADW/businessCardRecto.jpg" alt="">
+                                </figure>
+                                <p>
+                                    Papéterie:
+                                    Cartes de visite - Enveloppes personnalisées - Entête et filigrane de feuille
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                            <article class="carte art--haut">
+                                <h3>Logo</h3>
+                                <figure>
+                                    <img src="realisation/imgIllustratorADW/logos/Logo_Original.png" alt="">
+                                </figure>
+                                <p>
+                                    Nous créons votre logo
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+
+                        </div>
+
+                        <div class="cont--art__haut">
+                            <article class="carte art--haut">
+                                <h3>Affiche</h3>
+                                <figure>
+                                    <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
+                                </figure>
+                                <p>
+                                    Pour promouvoir un produit, un événement, une conférence
+                                    nous réalisons des affiches impactantes et qui toucheraient un large public.
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                            <article class="carte art--haut">
+                                <h3>Montage image</h3>
+                                <figure>
+                                    <img src="realisation/imgPhotoshopADW/ciel-etoilesMultipleSrc.jpg" alt="">
+                                </figure>
+                                <p>
+                                    Effacer un détail -
+                                    Enlever l'arrière plan -
+                                    Ajouter une image, ...
+                                    Dans votre photo.
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                        </div>
                     </section>
                     <!-- Le travail de DESIGN WEB -->
                     <section id="section-2__haut">
-                        <article class="carte art--haut">
-                            <h3>UI - UI</h3>
-                            <figure>
-                                <img src="images/uiux.jpg" alt="">
-                            </figure>
-                            <p>
-                                Un dessin de votre site
-                                avec la définition de l'endroit et du style de chaque élément de votre site
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
-                        <article class="carte art--haut">
-                            <h3>Prototypage</h3>
-                            <figure>
-                                <img src="images/prototypage.png" alt="">
-                            </figure>
-                            <p>
-                                La maquette finale de votre site confection soit avec Xd ou Figma
-                                Ici nous réalisons votre site entièr avant de l'encoder
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
-                        <article class="carte art--haut">
-                            <h3>Création du site CMS</h3>
-                            <figure>
-                                <img src="images/cmsWordPress.jpg" alt="">
-                            </figure>
-                            <p>
-                                Votre Site est crée à l'aide dun logiciel
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
-                        <article class="carte art--haut">
-                            <h3>Devellopement web code</h3>
-                            <figure>
-                                <img src="" alt="">
-                            </figure>
-                            <p>
-                                Votre Site est crée entièement en code html, css, javascript, ...
-                            </p>
-                            <a href="realisation/uiux.html">Plus de détails...</a>
-                        </article>
+                        <div class="cont--art__haut">
+
+                            <article class="carte art--haut">
+                                <h3>UI - UI</h3>
+                                <figure>
+                                    <img src="images/uiux.jpg" alt="">
+                                </figure>
+                                <p>
+                                    Un dessin de votre site
+                                    avec la définition de l'endroit et du style de chaque élément de votre site
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                            <article class="carte art--haut">
+                                <h3>Prototypage</h3>
+                                <figure>
+                                    <img src="images/prototypage.png" alt="">
+                                </figure>
+                                <p>
+                                    La maquette finale de votre site confection soit avec Xd ou Figma
+                                    Ici nous réalisons votre site entièr avant de l'encoder
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                        </div>
+                        <div class="cont--art__haut">
+
+                            <article class="carte art--haut">
+                                <h3>Création du site CMS</h3>
+                                <figure>
+                                    <img src="images/cmsWordPress.jpg" alt="">
+                                </figure>
+                                <p>
+                                    Votre Site est crée à l'aide dun logiciel
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                            <article class="carte art--haut">
+                                <h3>Devellopement web code</h3>
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+                                <p>
+                                    Votre Site est crée entièement en code html, css, javascript, ...
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+                        </div>
                     </section>
                 </div>
             </div>
