--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
                     <!-- Illustration Construction de l'identité graphique -->
                     <section id="section-1__haut">
 
-                        <div class="cont--art__haut">
-
+                        <div class="cont--art__haut flex--row">
                             <article class="carte art--haut">
                                 <h3>Carte de visite</h3>
                                 <figure>
@@ -237,20 +236,6 @@
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
                             <article class="carte art--haut">
-                                <h3>Logo</h3>
-                                <figure>
-                                    <img src="realisation/imgIllustratorADW/logos/Logo_Original.png" alt="">
-                                </figure>
-                                <p>
-                                    Nous créons votre logo
-                                </p>
-                                <a href="realisation/uiux.html">Plus de détails...</a>
-                            </article>
-
-                        </div>
-
-                        <div class="cont--art__haut">
-                            <article class="carte art--haut">
                                 <h3>Affiche</h3>
                                 <figure>
                                     <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
@@ -258,6 +243,20 @@
                                 <p>
                                     Pour promouvoir un produit, un événement, une conférence
                                     nous réalisons des affiches impactantes et qui toucheraient un large public.
+                                </p>
+                                <a href="realisation/uiux.html">Plus de détails...</a>
+                            </article>
+
+                        </div>
+
+                        <div class="cont--art__hau flex--row">
+                            <article class="carte art--haut">
+                                <h3>Logo</h3>
+                                <figure>
+                                    <img src="realisation/imgIllustratorADW/logos/Logo_Original.png" alt="">
+                                </figure>
+                                <p>
+                                    Nous créons votre logo
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
@@ -345,39 +344,62 @@
 
                 <div class="conclusion__texte">
                     <h2>Bâtir votre site web</h2>
-                    <div class="conclusion__texte--grid">
-                        <p class="citation">
-                            Lorsque l'expérience de l'utilisateur est supérieure à l'attente de l'utilisateur, la
-                            confiance est établie.
-                            Colm Tuite - Designer & développeur d'applications.
-                        </p>
-                        <p class="citation">
-                            Il y a trois réponses possibles : oui, non, et WOW ! Wow est la réaction que vous devez
-                            rechercher.
-                            Milton Glaser - Graphiste & typographe.
-                        </p>
-                        <p class="citation">
-                            La simplicité se démarque, alors que la complexité va se perdre inexorablement dans la
-                            foule.
-                            Kevin Barnett - Développeur back-end.
-                        </p>
+                    <div class="conclusion__textes">
+                        <article class="cont--citation">
+                            <p class="citation">
+                                Lorsque l'expérience de l'utilisateur est supérieure à l'attente de l'utilisateur, la
+                                confiance est établie.
+                            </p>
+                            <h3 class="citation--titre">Colm Tuite</h3>
+                            <h4>Designer & développeur d'applications.</h4>
+                        </article>
+                        <article class="cont--citation">
+                            <p class="citation">
+                                Il y a trois réponses possibles : oui, non, et WOW ! Wow est la réaction que vous devez
+                                rechercher.
+                            </p>
+                            <h3>Milton Glaser </h3>
+                            <h4>- Graphiste & typographe.</h4>
+
+
+                        </article>
+                        <article class="cont--citation">
+                            <p class="citation">
+                                La simplicité se démarque, alors que la complexité va se perdre inexorablement dans la
+                                foule.
+                            </p>
+                            <h3>Kevin Barnett</h3>
+                            <h4>- Développeur back-end.</h4>
+                        </article>
                     </div>
                 </div>
                 <div class="conclusion__texte">
                     <h2>Une vitrine sur le monde</h2>
                     <div class="conclusion__texte--grid">
-                        <p class="citation">
-                            Soyez la mesure de la qualité. De nombreuses personnes n'ont pas l'habitude d'un
-                            environnement où ce qui est attendu, c’est l’excellence.
-                            Steve Jobs - Gourou d'Apple.
-                        </p>
-                        <p class="citation">
-                            L'essence d'un projet, c'est l'harmonie parfaite entre l'esthétique, l'utile et le juste.
-                            Frank Lloyd Wright - Architecte & designer d'intérieur.
-                        </p>
-                        <p class="citation">
-                            Errare humanum est, perseverare diabolicum
-                        </p>
+                        <article class="cont--citation">
+                            <p class="citation">
+                                Soyez la mesure de la qualité. De nombreuses personnes n'ont pas l'habitude d'un
+                                environnement où ce qui est attendu, c’est l’excellence.
+                            </p>
+                            <h3>Steve Jobs</h3>
+                            <h4>- Gourou d'Apple.</h4>
+                        </article>
+                        <article class="cont--citation">
+                            <p class="citation">
+                                L'essence d'un projet, c'est l'harmonie parfaite entre l'esthétique, l'utile et le
+                                juste.
+                            </p>
+                            <h3>Frank Lloyd Wright </h3>
+                            <h4>- Architecte & designer d'intérieur.</h4>
+                        </article>
+
+                        <article class="cont--citation">
+                            <p class="citation">
+                                Errare humanum est, perseverare diabolicum
+                            </p>
+                            <h3>Citation romain</h3>
+                            <h4>- sagesse des anciens.</h4>
+                        </article>
                     </div>
                 </div>
             </div>
