--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 confiance est établie.
                             </p>
                             <h3 class="citation--titre">Colm Tuite</h3>
-                            <h4>Designer & développeur d'applications.</h4>
+                            <h4>- Designer & développeur d'applications -</h4>
                         </article>
                         <article class="cont--citation">
                             <p class="citation">
@@ -359,9 +359,7 @@
                                 rechercher.
                             </p>
                             <h3>Milton Glaser </h3>
-                            <h4>- Graphiste & typographe.</h4>
-
-
+                            <h4>- Graphiste & typographe -</h4>
                         </article>
                         <article class="cont--citation">
                             <p class="citation">
@@ -369,7 +367,7 @@
                                 foule.
                             </p>
                             <h3>Kevin Barnett</h3>
-                            <h4>- Développeur back-end.</h4>
+                            <h4>- Développeur back-end -</h4>
                         </article>
                     </div>
                 </div>
@@ -382,7 +380,7 @@
                                 environnement où ce qui est attendu, c’est l’excellence.
                             </p>
                             <h3>Steve Jobs</h3>
-                            <h4>- Gourou d'Apple.</h4>
+                            <h4>- Gourou d'Apple -</h4>
                         </article>
                         <article class="cont--citation">
                             <p class="citation">
@@ -390,7 +388,7 @@
                                 juste.
                             </p>
                             <h3>Frank Lloyd Wright </h3>
-                            <h4>- Architecte & designer d'intérieur.</h4>
+                            <h4>- Architecte & designer d'intérieur -</h4>
                         </article>
 
                         <article class="cont--citation">
@@ -398,7 +396,7 @@
                                 Errare humanum est, perseverare diabolicum
                             </p>
                             <h3>Citation romain</h3>
-                            <h4>- sagesse des anciens.</h4>
+                            <h4>- sagesse des anciens -</h4>
                         </article>
                     </div>
                 </div>
